Add some mvc. Next: Remove and replace with Backbone.js

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,4 +1,6 @@
-<h1>Home#welcome</h1>
-<p>Find me in app/views/home/welcome.html.erb</p>
+<div class="container">
 
-<%= @c.to_yaml %>
+  <h1>Stem Cell</h1>
+  <p>Yup.</p>
+
+</div> <!-- /container -->
