--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,3 @@
+<% if notice.present? %><p class="alert alert-notice"><%= notice %></p><% end %>
+<% if alert.present? %><p class="alert alert-alert"><%= alert %></p><% end %>
 <div id="container">Loading...</div>
