--- a/app/views/navbar/_base.html.erb
+++ b/app/views/navbar/_base.html.erb
@@ -5,9 +5,14 @@
         <span class="icon-bar"></span>
       </a>
       <a class="brand" href="#">Stem Cell</a>
+      <% if current_user.present? %>
+      <%= render :partial => 'navbar/signed_in' %>
+      <% else %>
+      <%= render :partial => 'navbar/signed_out' %>
+      <% end %>
       <div class="nav-collapse">
         <ul class="nav">
-          <li class="active"><a href="/">Home</a></li>
+          <li class="active"><%= link_to 'Home', :root %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
