--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,8 @@
-<% if notice.present? %><p class="alert alert-notice"><%= notice %></p><% end %>
-<% if alert.present? %><p class="alert alert-alert"><%= alert %></p><% end %>
+<%= render :partial => 'navbar/base' %>
+
+<div class="container">
+  <% if notice.present? %><p class="alert alert-notice"><%= notice %></p><% end %>
+  <% if alert.present? %><p class="alert alert-alert"><%= alert %></p><% end %>
+</div>
+
 <div id="container">Loading...</div>
-<div id="navbar">nada</div>
