Add name to user, show name in navbar

--- a/app/views/navbar/_signed_in.html.erb
+++ b/app/views/navbar/_signed_in.html.erb
@@ -1,6 +1,6 @@
 <div class="btn-group pull-right">
   <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-    <i class="icon-user"></i> <%= current_user.try(:id) || "Nobody" %>
+    <i class="icon-user"></i> <%= current_user.try(:name) || "Nobody" %>
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu">
