Add tests. WIP for partials and views.

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'navbar/base' %>
+<div id="navbar"></div>
 
 <div class="container">
   <% if notice.present? %><p class="alert alert-notice"><%= notice %></p><% end %>
